--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react": "18.2.0",
     "react-burger-menu": "^3.0.9",
     "react-dom": "18.2.0",
+    "react-use-draggable-scroll": "^0.4.7",
     "tailwindcss": "3.3.3",
     "typescript": "5.1.6",
     "yarn": "^1.22.19"
