--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "postcss": "8.4.27",
     "react": "18.2.0",
     "react-burger-menu": "^3.0.9",
+    "react-countup": "^6.4.2",
     "react-dom": "18.2.0",
     "react-use-draggable-scroll": "^0.4.7",
     "tailwindcss": "3.3.3",
