--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-burger-menu": "^3.0.9",
     "react-countup": "^6.4.2",
     "react-dom": "18.2.0",
+    "react-loading-skeleton": "^3.3.1",
     "react-use-draggable-scroll": "^0.4.7",
     "tailwindcss": "3.3.3",
     "typescript": "5.1.6",
