fix: make the size smaller

--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "swiper": "^11.0.5",
     "tailwindcss": "3.3.3",
     "typescript": "5.1.6",
+    "usehooks-ts": "^2.9.5",
     "yarn": "^1.22.19"
   },
   "devDependencies": {
